<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="100dp"
    android:orientation="vertical"
    android:layout_width="200dp">

    <TextView
        android:id="@+id/tv_tip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/heavy_grey"
        android:text="请用钉钉联系管理员" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <include layout="@layout/item_line" />

    <TextView
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="确定" />
</LinearLayout>
